--- a/morango.html
+++ b/morango.html
@@ -8,6 +8,19 @@
   <link rel="icon" type="image/jpeg" href="assets/criadora.jpg">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <!-- Utmify Scripts -->
+  <script src="https://cdn.utmify.com.br/scripts/utms/latest.js" data-utmify-prevent-xcod-sck data-utmify-prevent-subids async defer></script>
+
+  <script>
+    window.pixelId = "68821b2ae2469744e3a0bc1a";
+    var a = document.createElement("script");
+    a.setAttribute("async", "");
+    a.setAttribute("defer", "");
+    a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
+    document.head.appendChild(a);
+  </script>
+
   <style>
     .hero-gradient {
       background: linear-gradient(135deg, #ff4d6d 0%, #ff8fa3 100%);
@@ -326,17 +339,6 @@
           </div>
         </div>
 
-        <div class="bonus-card p-6 rounded-lg bg-white">
-          <div class="flex items-start mb-4">
-            <div class="bg-pink-100 text-pink-600 p-3 rounded-full mr-4">
-              <i class="fas fa-gift text-xl"></i>
-            </div>
-            <div>
-              <h3 class="font-bold text-xl mb-2">Bônus 2: Controle de Vendas</h3>
-              <p class="text-gray-600">Saiba tudo que você vendeu atráves de um controle de vendas (valor: R$ 67)</p>
-            </div>
-          </div>
-        </div>
 
         <div class="bonus-card p-6 rounded-lg bg-white">
           <div class="flex items-start mb-4">
@@ -344,8 +346,8 @@
               <i class="fas fa-gift text-xl"></i>
             </div>
             <div>
-              <h3 class="font-bold text-xl mb-2">Bônus 3: Como vender pelo Ifood</h3>
-              <p class="text-gray-600">Aprenda as Melhroes Técnicas para vender no iFood e conquistar mais clientes e vendas(valor: R$ 47)</p>
+              <h3 class="font-bold text-xl mb-2">Bônus 2: Como vender pelo Ifood</h3>
+              <p class="text-gray-600">Aprenda as Melhores Técnicas para vender no iFood e conquistar mais clientes e vendas(valor: R$ 47)</p>
             </div>
           </div>
         </div>
@@ -354,7 +356,7 @@
       </div>
 
       <div class="text-center mt-12">
-        <p class="text-xl font-bold text-pink-600 mb-4">VALOR TOTAL DOS BÔNUS: <span class="line-through">R$ 338</span></p>
+        <p class="text-xl font-bold text-pink-600 mb-4">VALOR TOTAL DOS BÔNUS: <span class="line-through">R$ 144</span></p>
         <p class="text-lg mb-6">HOJE VOCÊ LEVA TODOS ELES <span class="font-bold underline">GRÁTIS</span> COM O MÉTODO COMPLETO</p>
 
 
