--- a/index.html
+++ b/index.html
@@ -211,6 +211,54 @@
     </div>
   </section>
 
+  <!-- Profit Calculator -->
+  <section class="py-16 bg-gray-50">
+    <div class="container mx-auto px-4">
+      <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">Veja quanto você pode ganhar</h2>
+
+      <div class="max-w-2xl mx-auto bg-white p-8 rounded-xl shadow-md">
+        <div class="mb-6">
+          <label class="block text-gray-700 font-medium mb-2">Quantas unidades você quer vender por dia?</label>
+          <input type="range" min="10" max="100" value="30" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer" id="unitsSlider">
+          <div class="flex justify-between mt-2">
+            <span>10</span>
+            <span id="unitsValue" class="font-bold text-pink-600">30</span>
+            <span>100+</span>
+          </div>
+        </div>
+
+
+
+        <div class="mb-6">
+          <label class="block text-gray-700 font-medium mb-2">Quantos dias por semana você quer trabalhar?</label>
+          <input type="range" min="1" max="7" value="5" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer" id="daysSlider">
+          <div class="flex justify-between mt-2">
+            <span>1</span>
+            <span id="daysValue" class="font-bold text-pink-600">5</span>
+            <span>7</span>
+          </div>
+        </div>
+
+        <div class="bg-pink-50 p-4 rounded-lg border border-pink-100">
+          <h3 class="font-bold text-lg mb-2 text-gray-800">Seu lucro potencial:</h3>
+          <div class="text-3xl font-bold text-pink-600 mb-1" id="profitResult">R$ 1.050</div>
+          <p class="text-gray-600 text-sm">por semana | <span id="monthlyProfit">R$ 4.200</span> por mês</p>
+        </div>
+
+        <div class="mt-6 text-sm text-gray-500">
+          <p>* Cálculo baseado em lucro médio de R$ 7 por unidade. Valores podem variar de acordo com sua região.</p>
+        </div>
+      </div>
+    </div>
+    <div class="mt-12 text-center">
+      <a href="https://pay.kirvano.com/4a9ffc34-530e-4e51-bad1-190cfff154fb" class="bg-pink-600 hover:bg-pink-700 text-white font-bold py-4 px-8 rounded-lg pulse-animation inline-block">
+        QUERO MEU ACESSO + BÔNUS!
+      </a>
+    </div>
+  </section>
+
+
+
   <!-- Testimonials -->
   <section class="py-16 bg-white">
     <div class="container mx-auto px-4">
@@ -281,44 +329,7 @@
     </div>
   </section>
 
-  <!-- Profit Calculator -->
-  <section class="py-16 bg-gray-50">
-    <div class="container mx-auto px-4">
-      <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">Veja quanto você pode ganhar</h2>
 
-      <div class="max-w-2xl mx-auto bg-white p-8 rounded-xl shadow-md">
-        <div class="mb-6">
-          <label class="block text-gray-700 font-medium mb-2">Quantas unidades você quer vender por dia?</label>
-          <input type="range" min="10" max="100" value="30" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer" id="unitsSlider">
-          <div class="flex justify-between mt-2">
-            <span>10</span>
-            <span id="unitsValue" class="font-bold text-pink-600">30</span>
-            <span>100+</span>
-          </div>
-        </div>
-
-        <div class="mb-6">
-          <label class="block text-gray-700 font-medium mb-2">Quantos dias por semana você quer trabalhar?</label>
-          <input type="range" min="1" max="7" value="5" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer" id="daysSlider">
-          <div class="flex justify-between mt-2">
-            <span>1</span>
-            <span id="daysValue" class="font-bold text-pink-600">5</span>
-            <span>7</span>
-          </div>
-        </div>
-
-        <div class="bg-pink-50 p-4 rounded-lg border border-pink-100">
-          <h3 class="font-bold text-lg mb-2 text-gray-800">Seu lucro potencial:</h3>
-          <div class="text-3xl font-bold text-pink-600 mb-1" id="profitResult">R$ 1.050</div>
-          <p class="text-gray-600 text-sm">por semana | <span id="monthlyProfit">R$ 4.200</span> por mês</p>
-        </div>
-
-        <div class="mt-6 text-sm text-gray-500">
-          <p>* Cálculo baseado em lucro médio de R$ 7 por unidade. Valores podem variar de acordo com sua região.</p>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <!-- Bonuses -->
   <section class="py-16 bg-white">
